Correct size and spacing of article headers.

--- a/wwwroot/css/sections.css
+++ b/wwwroot/css/sections.css
@@ -55,6 +55,10 @@ section {
 	font-size: 0.9rem
 }
 
+article > header :is(h1, h2, h3, h4, h5, h6) {
+    margin-bottom: 0
+  }
+
 
 /********** ABOUT SCTION **********/
 #about-grid {
